# CollisionHandler

./: CMakeLists.txt  README.md
BallCollision/: CMakeLists.txt  README.md  main.cpp  test.cpp  test_two_balls.cpp
BallCollision/UML/: class_diagram.drawio  quad_tree.drawio  shape.drawio  simulation.drawio
BallCollision/lib/: Ball.h  BaseQuadTree.h  Constants.h  QuadTree.h  ball.h  base_quad_tree.h  constants.h  middle_average_filter.h  quad_tree.h  shape.h  simulation.h  vector_operations.h
BallCollision/src/: Ball.cpp  QuadTree.cpp  ball.cpp  quad_tree.cpp  shape.cpp  simulation.cpp  vector_operations.cpp
SFML-2.5.1/doc/html/: Glsl_8hpp_source.html  Keyboard_8hpp_source.html  Music_8hpp_source.html  Rect_8hpp_source.html  SoundFileFactory_8hpp_source.html  String_8hpp_source.html  ThreadLocalPtr_8hpp_source.html  Vector2_8hpp_source.html  Vector3_8hpp_source.html  classsf_1_1Clock.html  classsf_1_1Keyboard-members.html  classsf_1_1Keyboard.html  classsf_1_1Rect-members.html  classsf_1_1Rect.html  classsf_1_1SoundFileFactory.html  classsf_1_1String-members.html  classsf_1_1String.html  classsf_1_1ThreadLocal.html  classsf_1_1ThreadLocalPtr-members.html  classsf_1_1ThreadLocalPtr.html  classsf_1_1Vector2-members.html  classsf_1_1Vector2.html  classsf_1_1Vector3-members.html  classsf_1_1Vector3.html  functions_c.html  functions_eval_t.html  functions_func_c.html  functions_func_i.html  functions_func_o.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_v.html  functions_h.html  functions_i.html  functions_l.html  functions_o.html  functions_r.html  functions_s.html  functions_t.html  (+12 more)
SFML-2.5.1/include/SFML/Graphics/: Glsl.hpp  Rect.hpp
SFML-2.5.1/include/SFML/System/: Clock.hpp  ThreadLocalPtr.hpp  Vector2.hpp  Vector3.hpp
SFML-2.5.1/include/SFML/Window/: Keyboard.hpp
